--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "study.163.com video downloader.",
-  // "homepage_url": "https://github.com/j-delaney/back-to-backspace",
   "browser_action": {
     "default_icon": "icons/icon.png",
     "default_popup": "src/popup.html"
@@ -14,8 +13,8 @@
   },
   "permissions": [
     "tabs",
-    "http://*/*/", "https://*/*/",
-    // "http://study.163.com/*", "https://study.163.com/*",
+    "http://*/*/",
+    "https://*/*/",
     "webRequest",
     "webRequestBlocking",
     "storage",
@@ -27,11 +26,16 @@
     ],
     "persistent": true
   },
-   "content_scripts": [
+  "content_scripts": [
     {
       "run_at": "document_end",
-      "matches": ["http://study.163.com/*", "https://study.163.com/*"],
-      "js": ["src/content.js"]
+      "matches": [
+        "http://study.163.com/*",
+        "https://study.163.com/*"
+      ],
+      "js": [
+        "src/content.js"
+      ]
     }
   ]
 }
